# esg_fastapi

./: .gitignore  Dockerfile  Dockerfile.local  README.md  main.py  pyproject.toml  requirements.txt  test_api.py
.github/: dependabot.yml
.github/workflows/: k8s.yml  pytest.yml  release.yml
docker-compose/: docker-compose.yaml  fluent-bit.yaml  grafana-datasources.yaml  prometheus.yaml  pyroscope.yaml  tempo.yaml
esg_fastapi/: __init__.py  __main__.py  settings.py  utils.py
esg_fastapi/api/: __init__.py  main.py
esg_fastapi/api/versions/: __init__.py
esg_fastapi/api/versions/v1/: __init__.py  models.py  routes.py  types.py
esg_fastapi/configuration/: __init__.py  gunicorn.py  logging.py  opentelemetry.py
esg_fastapi/observability/: __init__.py  main.py  models.py  routes.py
features/Caching/: caching.feature
features/ESGSearch_Parity/: esg_search_parity.feature
features/Observability/: observability_endpoints.feature  trace_propagation.feature
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  imagepullsecrets.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
scripts/: find_missing_solr_fields.py
src/esg_fastapi/: __init__.py  utils.py  wsgi.py
src/esg_fastapi/api/: __init__.py  globus.py  main.py  models.py  routes.py  types.py
src/esg_fastapi/api/versions/: __init__.py
src/esg_fastapi/api/versions/v1/: __init__.py  globus.py  models.py  routes.py  types.py
src/esg_fastapi/configuration/: __init__.py  globus.py  logging.py  opentelemetry.py  profiling.py
src/esg_fastapi/observability/: main.py  metrics.py  routes.py
tests/: __init__.py  conftest.py  test_app.py  test_caching.py  test_esgsearch_parity.py  test_feature_parity.py  test_fixture_generation.py  test_globus_client.py  test_metrics.py  test_models.py  test_observability.py  test_settings.py  test_types.py  test_utils.py
tests/Features/: esg_search_parity.feature
tests/fixtures/: 1_file_metagrid_response.json  1_record_dataset_response.json  2_record_dataset_response.json  from_and_to_query.json  from_query.json  max_version_query.json  metagrid_default_request.json  min_and_max_version_query.json  min_version_query.json  minimal_response.json  multiple_data_nodes.json  multiple_projects.json  to_query.json
